# mosaico_cppsdk

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
cli/: CMakeLists.txt  cli_main.cpp  dump.cpp  dump.hpp
src/: CMakeLists.txt  mcap_reader.cpp  mcap_reader.hpp  mcap_writer.cpp  mcap_writer.hpp  progress.hpp
src/decoders/: cdr_decoder.cpp  cdr_decoder.hpp  decoder.cpp  decoder.hpp  decoder_factory.cpp  decoder_factory.hpp  json_decoder.cpp  json_decoder.hpp  msg_parser.cpp  msg_parser.hpp  passthrough_decoder.cpp  passthrough_decoder.hpp  protobuf_decoder.cpp  protobuf_decoder.hpp  ros1_decoder.cpp  ros1_decoder.hpp
src/flight/: connection_pool.cpp  connection_pool.hpp  metadata.cpp  mosaico_client.cpp  mosaico_client.hpp  types.hpp  upload_session.cpp  upload_session.hpp
src/ontology/: field_map.hpp  ontology_builder.hpp  ontology_registry.cpp  ontology_registry.hpp  tag_resolver.cpp  tag_resolver.hpp
src/ontology/builders/: builder_utils.cpp  builder_utils.hpp  compound_geometry_builders.cpp  compound_geometry_builders.hpp  geometry_builders.cpp  geometry_builders.hpp  gps_builders.cpp  gps_builders.hpp  imu_builder.cpp  imu_builder.hpp  nav_builders.cpp  nav_builders.hpp  raw_builder.cpp  raw_builder.hpp  schema_types.hpp  sensor_builders.cpp  sensor_builders.hpp  std_type_builder.cpp  std_type_builder.hpp  struct_append.hpp  typed_builder.hpp
tests/: CMakeLists.txt  builder_utils_test.cpp  cdr_decoder_test.cpp  connection_pool_test.cpp  decoder_test.cpp  dump_test.cpp  field_map_test.cpp  geometry_builders_test.cpp  gps_builder_test.cpp  imu_builder_test.cpp  json_decoder_test.cpp  mcap_reader_test.cpp  mcap_roundtrip_test.cpp  mcap_writer_test.cpp  metadata_test.cpp  mosaico_client_test.cpp  msg_parser_test.cpp  nav_builders_test.cpp  ontology_registry_test.cpp  passthrough_decoder_test.cpp  progress_test.cpp  protobuf_decoder_test.cpp  raw_builder_test.cpp  ros1_decoder_test.cpp  sensor_builders_test.cpp  std_type_builder_test.cpp  upload_session_test.cpp
